--- a/src/makefile
+++ b/src/makefile
@@ -4,6 +4,6 @@ build:
 
 install:
 	FILENAME=libtensorflow-cpu-linux-x86_64-2.11.0.tar.gz
-	wget -q --no-check-certificate https://storage.googleapis.com/tensorflow/libtensorflow/${FILENAME}
+	wget https://storage.googleapis.com/tensorflow/libtensorflow/${FILENAME}
 	sudo tar -C /usr/local -xzf ${FILENAME}
 	sudo ldconfig /usr/local/lib
